# motherduck-fivetran-connector

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  asan_suppressions.txt  lsan-suppressions.supp  proto_helper.cmake  sanitizer-disallowed-entries.txt  sanitizer_ignorelist.txt
.github/workflows/: integration_test.yaml
dependencies-patches/: abseil.patch
docs/: overview.md  setup-guide.md
includes/: common.hpp  config.hpp  config_tester.hpp  configuration_tester.hpp  connection_factory.hpp  csv_arrow_ingest.hpp  csv_processor.hpp  csv_reader.hpp  decryption.hpp  extension_helper.hpp  fivetran_duckdb_interop.hpp  ingest_properties.hpp  logging.hpp  md_error.hpp  md_logging.hpp  memory_backed_file.hpp  motherduck_destination_server.hpp  openssl_helper.hpp  request_context.hpp  schema_types.hpp  sql_generator.hpp  stacktrace.hpp  temp_database.hpp  types.hpp
protos/: logging_sink.proto
scripts/: get_duckdb_platform.sh
src/: config_tester.cpp  configuration_tester.cpp  connection_factory.cpp  csv_arrow_ingest.cpp  csv_processor.cpp  decryption.cpp  extension_helper.cpp  fivetran_duckdb_interop.cpp  md_error.cpp  md_logging.cpp  memory_backed_file.cpp  motherduck_destination.cpp  motherduck_destination_server.cpp  openssl_helper.cpp  request_context.cpp  schema_types.cpp  sql_generator.cpp  stacktrace.cpp  temp_database.cpp
test/: CMakeLists.txt  constants.cpp  constants.hpp  test_decryption.cpp  test_helpers.cpp  test_helpers.hpp  test_main.cpp  test_md_error.cpp  test_md_logger.cpp  test_memory_backed_file.cpp  test_process_file.cpp
test/csv_files/: booleans.csv  dates_and_times.csv  large_file.csv  mixed_types.csv  nulls_and_empty.csv  numeric_types.csv  single_column.csv  special_chars.csv  wide_columns.csv
test/destination_tester_input/: README.md  decrypt.py
test/destination_tester_input/generated_files/: campaign_input_1_update.csv.zstd.aes  customers_input_2_delete.csv.zstd  customers_input_2_delete.csv.zstd.aes  customers_input_2_upsert.csv.zstd.aes  orders_input_2_upsert.csv.zstd
test/files/: blob_update.csv  books_delete.csv  books_history_delete.csv  books_history_delete_pk_only.csv  books_history_earlier_earliest_1.csv  books_history_earlier_earliest_2.csv  books_history_earlier_upsert_1.csv  books_history_earlier_upsert_2.csv  books_history_earliest.csv  books_history_update.csv  books_history_upsert.csv  books_history_upsert_regular_write.csv  books_update.csv  books_upsert.csv  history_reordered_earliest.csv  history_reordered_initial.csv  history_reordered_update.csv  huge_books.csv  my.csv  transaction_history_input_5_upsert.csv  transaction_input_5_upsert.csv
test/files/compressed_csv/: lorem_ipsum_15mb.csv.zst  lorem_ipsum_20mb.csv.zst  lorem_ipsum_27mb.csv.zst  train_few_shot.csv.zst
test/files/csv/: booleans.csv  dates_and_times.csv  escaped_string.csv  large.csv  many_columns.csv  mixed_types.csv  nulls_and_empty.csv  numeric_types.csv  single_column.csv  special_chars.csv  special_null.csv  unmodified_string.csv
test/files/destination_tester/: .gitignore  README.md  history_mode_1_INIT.json  history_mode_2_UPSERT.json  history_mode_3_UPDATE.json  history_mode_4_DELETE.json  input_1.json  input_2.json  input_3.json  input_4.json  input_6.json  schema_migrations_input_ddl.json  schema_migrations_input_dml.json  schema_migrations_input_sync_modes.json
test/files/destination_tester/generated_files/: campaign_input_1_delete.csv  campaign_input_1_delete.csv.zstd  campaign_input_1_delete.csv.zstd.aes  campaign_input_1_delete.csv.zstd.aes.key  campaign_input_1_update.csv  campaign_input_1_update.csv.zstd  campaign_input_1_update.csv.zstd.aes.key  campaign_input_1_upsert.csv  campaign_input_1_upsert.csv.zstd  campaign_input_1_upsert.csv.zstd.aes  campaign_input_1_upsert.csv.zstd.aes.key  customers_input_2_delete.csv  customers_input_2_delete.csv.zstd.aes.key  customers_input_2_update.csv  customers_input_2_update.csv.zstd  customers_input_2_update.csv.zstd.aes  customers_input_2_update.csv.zstd.aes.key  customers_input_2_upsert.csv  customers_input_2_upsert.csv.zstd  customers_input_2_upsert.csv.zstd.aes.key  mixed_data_input_4_upsert.csv  mixed_data_input_4_upsert.csv.zstd  mixed_data_input_4_upsert.csv.zstd.aes  mixed_data_input_4_upsert.csv.zstd.aes.key  orders_input_2_update.csv  orders_input_2_update.csv.zstd  orders_input_2_update.csv.zstd.aes  orders_input_2_update.csv.zstd.aes.key  orders_input_2_upsert.csv  orders_input_2_upsert.csv.zstd.aes  orders_input_2_upsert.csv.zstd.aes.key  products_input_2_upsert.csv  products_input_2_upsert.csv.zstd  products_input_2_upsert.csv.zstd.aes  products_input_2_upsert.csv.zstd.aes.key  transaction_history_history_mode_1_INIT_earliest.csv  transaction_history_history_mode_1_INIT_upsert.csv  transaction_history_history_mode_2_UPSERT_earliest.csv  transaction_history_history_mode_2_UPSERT_upsert.csv  transaction_history_history_mode_3_UPDATE_earliest.csv  (+23 more)
test/files/encrypted/: customers-100000.csv.aes.key  customers-100000_readme.md
test/integration/: common.cpp  common.hpp  test_config_tester.cpp  test_migrate.cpp  test_server.cpp  test_server_parallel.cpp
test/utils/: decrypt.py
